--- a/src/css/jquery.handsontable.css
+++ b/src/css/jquery.handsontable.css
@@ -14,6 +14,13 @@
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.3em;
   font-size: 13px;
+
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .handsontable.htAutoColumnSize {
